[package]
name = "jumpjump"
version = "0.1.0"
authors = ["Leaf Garland <leafgarland@users.noreply.github.com>"]

[dependencies]
failure = "0.1.1"
url = "1.7.0"
itertools = "0.7.8"
path_abs = "0.4.1"
dirs = "1.0.4"
regex = "1.0.6"

[dependencies.rusqlite]
version = "0.15.0"
features = ["bundled","functions"]

[dependencies.clap]
version = "2"
default-features = false
