[package]
name = "jumpjump"
version = "0.1.0"
authors = ["Leaf Garland <leafgarland@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
url = "2.1.0"
itertools = "0.8.1"
path_abs = "0.5.0"
dirs = "2.0.2"
regex = "1.3.1"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled","functions"]

[dependencies.clap]
version = "2"
default-features = false
